# production-ready-rag-us-law

./: .coverage  .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.light.yml  docker-compose.yml  ingestion.sh  requirements.txt  server.sh
.github/workflows/: api_gateway_ci.yaml  auth_api_ci.yaml  backend_ci.yaml  chat_api_ci.yaml  ci.yaml  frontend_ci.yaml  ingestion_ci.yaml  user_api_ci.yaml
app/: .env.example
app/api-gateway/: .env.example  Dockerfile  Makefile  README.md  requirements.txt
app/auth-api/: .env.example  Dockerfile  Makefile  requirements.txt
app/chat-api/: .env.example  Dockerfile  Makefile  requirements.txt
app/frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
app/ingestion-worker/: .env.example  Dockerfile  Makefile  ingestion.sh  requirements.txt
app/user-api/: .env.example  Dockerfile  Makefile  requirements.txt
backend/: .env.example  Dockerfile  Makefile  pytest.ini
frontend/: package.json
libs/code-shared/: pyproject.toml
libs/code-shared/src/code_shared/: __init__.py
libs/code-shared/src/code_shared/core/: __init__.py  config.py  db_client.py  exceptions.py  schema.py  semantic_cache.py
libs/code-shared/src/code_shared/graph_store/: neo4j_client.py
libs/code-shared/src/code_shared/llm/: __init__.py  openai_llm.py
libs/code-shared/src/code_shared/llm/prompts/: system_prompt.txt
llm/: factory.py  prompt_builder.py  providers.yaml
monitoring/: kube-prometheus-stack-values.yaml
terraform/: outputs.tf
tests/: conftest.py
(+206 files in other folders)
